<resources>
    <string name="app_name">CooKing</string>
    <string name="recipe">Recipe</string>
    <string name="rate_us">Rate Us</string>
    <string name="confirm">Confirm</string>
    <string name="feedback">Feedback</string>
    <string name="country">Country</string>
    <string name="malaysia">Malaysia</string>
    <string name="germany">Germany</string>
    <string name="japan">Japan</string>
    <string name="rojak">Fruit Rojak</string>
    <string name="begedil">Begedil</string>
    <string name="bubur">Bubur Cha Cha</string>
    <string name="potato_salad">Potato Salad</string>
    <string name="potato_pancake">Potato Pancake</string>
    <string name="semolina_pudding">Semolina Pudding</string>
    <string name="chawanmushi">Chawanmushi</string>
    <string name="wafu">Wafu Spaghetti</string>
    <string name="miso">Miso Chicken</string>
    <string name="more_recipe">More Recipe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="logout">Log Out</string>
</resources>