<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recipe_background"
    tools:context=".RecipeActivity">

    <ImageButton
        android:id="@+id/malaysiaButton"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:contentDescription="@string/malaysia"
        app:layout_constraintBottom_toTopOf="@+id/germanyButton"
        app:layout_constraintEnd_toEndOf="@+id/countryTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/countryTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView"
        app:srcCompat="@drawable/malaysia" />

    <ImageButton
        android:id="@+id/germanyButton"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/germany"
        app:layout_constraintBottom_toTopOf="@+id/japanButton"
        app:layout_constraintEnd_toEndOf="@+id/malaysiaButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/malaysiaButton"
        app:layout_constraintTop_toBottomOf="@+id/malaysiaButton"
        app:srcCompat="@drawable/germany" />

    <ImageButton
        android:id="@+id/japanButton"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="166dp"
        android:background="@null"
        android:contentDescription="@string/japan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/germanyButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/germanyButton"
        app:layout_constraintTop_toBottomOf="@+id/germanyButton"
        app:srcCompat="@drawable/japan" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="3dp"
        android:text="@string/country"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/malaysiaButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMoreRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/more_recipe"
        android:textAllCaps="false"
        android:textColor="@color/beige"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/japanButton"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/japanButton"
        app:layout_constraintTop_toBottomOf="@+id/japanButton" />

</androidx.constraintlayout.widget.ConstraintLayout>