<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/RecipeButton"
        android:layout_width="134dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:text="@string/recipe"
        android:textColor="#000000"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/RateUsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RateUsButton"
        android:layout_width="134dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:text="@string/rate_us"
        android:textColor="#000000"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        app:layout_constraintEnd_toEndOf="@+id/RecipeButton"
        app:layout_constraintStart_toStartOf="@+id/RecipeButton"
        app:layout_constraintTop_toBottomOf="@+id/RecipeButton" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="134dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="199dp"
        android:backgroundTint="#009688"
        android:text="@string/logout"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/RateUsButton"
        app:layout_constraintStart_toStartOf="@+id/RateUsButton"
        app:layout_constraintTop_toBottomOf="@+id/RateUsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>