<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewCooKing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="65dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/textViewCooKing"
        app:layout_constraintStart_toStartOf="@+id/textViewCooKing"
        app:layout_constraintTop_toBottomOf="@+id/textViewCooKing" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextUser"
        app:layout_constraintStart_toStartOf="@+id/editTextUser"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/orange"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonMainRegister"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMainRegister"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="339dp"
        android:background="@color/orange"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>